# simple-django-login-and-register

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  justfile  pyproject.toml  pyrefly.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
source/: manage.py
source/accounts/: forms.py  models.py  urls.py  utils.py  views.py
source/accounts/migrations/: 0001_initial.py  0002_activation_email.py  0002_auto_20180616_1933.py  0003_alter_activation_id.py
source/accounts/templates/accounts/: change_password_done.html  log_in.html  log_in.html.py  log_out.html  log_out.html.py  log_out_confirm.html  login.html  logout.html  password_change.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  recover_username.html  register.html  remind_username.html  remind_username.html.py  resend_activation_code.html  resend_activation_code.html.py  restore_password.html  restore_password.html.py  restore_password_complete.html  restore_password_confirm.html  restore_password_confirm.html.py  restore_password_done.html  restore_password_done.html.py  sign_up.html  sign_up.html.py  username_forgot.html
source/accounts/templates/accounts/email/: activate_profile.html  activate_profile.txt  activation_profile.html  change_email.html  change_email.txt  forgotten_username.html  password_reset_email.html  password_reset_email.txt
source/accounts/templates/accounts/profile/: edit.html  (+6 more)
source/app/: __init__.py  settings.py  urls.py  wsgi.py
source/app/conf/development/: settings.py
source/app/conf/production/: settings.py
source/content/assets/css/: styles.css
source/content/templates/accounts/: login.html  logout.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html  resend_activation_code.html
source/content/templates/email/: activation_profile.html  change_email.html
source/content/templates/main/: change_language.html  index.html
source/main/: views.py
(+37 files in other folders)
