[tool.poetry]
name = "simple-django-login-and-register"
version = "3.6"
description = "An example of Django project with basic user functionality."
readme = "README.md"
authors = ["Yehor Smoliakov <yehors+gh@ukr.net>"]
repository = "https://github.com/egorsmkv/simple-django-login-and-register"
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    'Programming Language :: Python :: 3',
]

[tool.poetry.dependencies]
python = ">=3.8"
Django = "==4.2.3"
django-bootstrap4 = "==23.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
