[project]
name = "simple-django-login-and-register"
version = "0.4.9"
description = "An example of Django project with basic user functionality."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Django==5.2.4",
    "django-bootstrap4==25.1",
]

[project.optional-dependencies]
dev = [
    "django-stubs[compatible-mypy]>=5.2.0",
    "ruff>=0.1",
    "pyrefly>=0.1",
    "djade>=0.1",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "app.settings"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

line-length = 88
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)
select = ["E", "F", "I"]
# Ignore line length violations
ignore = ["E501", "F403"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use single quotes for strings.
quote-style = "double"

# Indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
